Fix intro alignment

--- a/styles.css
+++ b/styles.css
@@ -14,6 +14,7 @@ h5 {
 
 p {
   color: hsl(229, 6%, 66%);
+  font-size: 0.9rem;
 }
 
 img {
@@ -30,6 +31,11 @@ footer {
 
 #heading-bold {
   font-weight: 400;
+}
+
+#second-paragraph {
+  max-width: 31%;
+  margin-bottom: 2rem;
 }
 
 #orange,
@@ -57,6 +63,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  font-size: 0.9rem;
 }
 
 .intro h1,
@@ -82,6 +89,9 @@ h5 {
 }
 
 @media only screen and (max-width: 786px) {
+  #second-paragraph {
+    max-width: 98%;
+  }
   .row {
     flex-direction: column;
   }
